# FINETUNING-ON-AWS

./: .gitignore  Finetuning_of_GPT_Model.ipynb  README.md  estimator_launcher.ipynb  pyproject.toml  rag_app_backend.py  rag_app_ui.py
finetuning/: experiment.ipynb
finetuning_experiments/: experiment.ipynb
scripts/: train.py
