[project]
name = "finetuning-on-aws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes==0.43.3",
    "boto3>=1.40.70",
    "cmake==3.27.0",
    "datasets==2.19.1",
    "faiss-cpu>=1.13.0",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-google-genai>=3.0.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "peft==0.11.1",
    "pyarrow==16.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "s3fs==2024.3.1",
    "sagemaker>=2.254.1",
    "streamlit>=1.51.0",
    "transformers==4.44.2",
]
